[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "onenoteextractor"
dynamic = ["version"]
description = "Simple extractor for OneNote files."
readme = "README.md"
requires-python = ">=3.8"
keywords = []
authors = [
  { name = "Threat Intel", email = "threatintel@volexity.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: Other/Proprietary License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "msoffcrypto-tool~=5.0",
]

[project.scripts]
one-extract = "onenoteextractor.cli:run"

[project.urls]
Documentation = "https://github.com/volexity/one-extract/blob/main/README.md"
Issues = "https://github.com/volexity/one-extract/issues"
Source = "https://github.com/volexity/one-extract"

[envs.hatch-static-analysis]
config-path = "none"

[tool.coverage.run]
source_pkgs = ["onenoteextractor", "tests"]
branch = true
parallel = true
omit = [
  "src/onenoteextractor/_version.py",
]

[tool.coverage.paths]
intel_api = ["src/onenoteextractor", "*/one-extract/src/onenoteextractor"]
tests = ["tests", "*/one-extract/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.hooks.vcs]
version-file = "src/onenoteextractor/_version.py"

[tool.hatch.envs.default]
extra-dependencies = [
  "mypy~=1.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/onenoteextractor}"

[tool.hatch.envs.hatch-static-analysis]
config-path = "none"
dependencies = ["ruff~=0.5"]

[tool.hatch.envs.hatch-test]
extra-dependencies = []

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.12", "3.11", "3.10", "3.9", "3.8"]

[tool.hatch.version]
source = "vcs"

[[tool.mypy.overrides]]
module = [
  "msoffcrypto.*"
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN101",
  "ANN102",
  "C901",
  "COM812",
  "E999",
  "ERA001",
  "FIX001",
  "FIX002",
  "FIX003",
  "FIX004",
  "ISC001",
  "PLR0912",
  "PLR0913",
  "TD001",
  "TD002",
  "TD003"
]
pydocstyle = { convention = 'google' }

[tool.ruff.lint.per-file-ignores]
"**/_version.py" = [
  "D100"
]
"**/tests/**/*" = [
  "ARG001",
  "D100",
  "D103",
  "D104",
  "PLC1901",
  "PLR2004",
  "PLR6301",
  "S",
  "TID252",
]

[tool.ruff.lint.isort]
known-first-party = ["onenoteextractor"]

[tool.hatch.envs.default.env-vars]
PIP_INDEX_URL = "https://artifactory.research.volexity.com/artifactory/api/pypi/pypi/simple"
UV_INDEX_URL = "https://artifactory.research.volexity.com/artifactory/api/pypi/pypi/simple"

[tool.hatch.envs.hatch-static-analysis.env-vars]
PIP_INDEX_URL = "https://artifactory.research.volexity.com/artifactory/api/pypi/pypi/simple"
UV_INDEX_URL = "https://artifactory.research.volexity.com/artifactory/api/pypi/pypi/simple"

[tool.hatch.envs.hatch-test.env-vars]
PIP_INDEX_URL = "https://artifactory.research.volexity.com/artifactory/api/pypi/pypi/simple"
UV_INDEX_URL = "https://artifactory.research.volexity.com/artifactory/api/pypi/pypi/simple"
